--- a/Pages/Search.cshtml
+++ b/Pages/Search.cshtml
@@ -22,7 +22,7 @@
 
         <div class="info_text">
             These examples are from <a href="https://www.postgresql.org/docs/12/textsearch-controls.html#TEXTSEARCH-PARSING-QUERIES">PostgreSQL's documentation</a>,
-            but only the first two seem to be working in Budoco:
+            but only the first two seem to be working in Budoco. Why?
             <br>
             dog cat => searchs for text that contains both dog AND cat
             <br>
