--- a/Pages/Admin/Admin.cshtml
+++ b/Pages/Admin/Admin.cshtml
@@ -9,20 +9,22 @@
     Console.WriteLine("Admin response code:" + HttpContext.Response.StatusCode);
 }
 <h1>Admin</h1>
-
+<br>
 
 <div><a href="/Admin/Users">Users</a></div>
-
-<h2>The rest is under construction. Update the db yourself with SQL. See setup.sql</h2>
-
-<div><a href="/Admin/Projects">Projects</a></div>
-<div><a href="/Admin/Categories">Categories</a></div>
-<div><a href="/Admin/Statuses">Statuses</a></div>
-<div><a href="/Admin/Priorities">Priorities</a></div>
-<div><a href="/Admin/Organizations">Organizations</a></div>
 <br>
+
+<div><a href="/Admin/Categories">Categories</a></div>
+<div><a href="/Admin/Priorities">Priorities</a></div>
+<div><a href="/Admin/Projects">Projects</a></div>
+<div><a href="/Admin/Organizations">Organizations</a></div>
+<div><a href="/Admin/Statuses">Statuses</a></div>
+<br>
+
 <div><a href="/Admin/Queries">Queries</a></div>
 <br>
+
+<h1>Under Construction</h1>
 <div><a href="/Admin/Email">Email/a></div>
 <div><a href="/Admin/RunSql">RunSql</a></div>
 <div><a href="/Admin/Logs">Logs</a></div>
