--- a/Pages/Admin/Organizations.cshtml
+++ b/Pages/Admin/Organizations.cshtml
@@ -1,8 +1,8 @@
 ﻿@page
-@model UsersModel
+@model OrganizationsModel
 
 @{
-    ViewData["Title"] = "Users";
+    ViewData["Title"] = "Organizations";
 }
 
 <h1>@ViewData["Title"]</h1>
