--- a/Pages/Admin/Projects.cshtml
+++ b/Pages/Admin/Projects.cshtml
@@ -1,8 +1,8 @@
 @page
-@model PrioritiesModel
+@model ProjectsModel
 
 @{
-    ViewData["Title"] = "Priorities";
+    ViewData["Title"] = "Projects";
 }
 
 <h1>@ViewData["Title"]</h1>
