status cru(d) working

--- a/Pages/Admin/Projects.cshtml
+++ b/Pages/Admin/Projects.cshtml
@@ -7,6 +7,8 @@
 
 <h1>@ViewData["Title"]</h1>
 
+<a href="Project?id=0">Create Project</a>
+
 <partial name="_DataTablePartial" />
 
 @section Scripts {
