--- a/Pages/Admin/Statuses.cshtml
+++ b/Pages/Admin/Statuses.cshtml
@@ -7,6 +7,8 @@
 
 <h1>@ViewData["Title"]</h1>
 
+<a href="Status?id=0">Create Status</a>
+
 <partial name="_DataTablePartial" />
 
 @section Scripts {
