--- a/Pages/Admin/Categories.cshtml
+++ b/Pages/Admin/Categories.cshtml
@@ -7,6 +7,8 @@
 
 <h1>@ViewData["Title"]</h1>
 
+<a href="Category?id=0">Create Category</a>
+
 <partial name="_DataTablePartial" />
 
 @section Scripts {
