--- a/Pages/Admin/Organizations.cshtml
+++ b/Pages/Admin/Organizations.cshtml
@@ -7,6 +7,8 @@
 
 <h1>@ViewData["Title"]</h1>
 
+<a href="Organization?id=0">Create Organization</a>
+
 <partial name="_DataTablePartial" />
 
 @section Scripts {
