--- a/Pages/Admin/Priorities.cshtml
+++ b/Pages/Admin/Priorities.cshtml
@@ -7,6 +7,8 @@
 
 <h1>@ViewData["Title"]</h1>
 
+<a href="Priority?id=0">Create Priority</a>
+
 <partial name="_DataTablePartial" />
 
 @section Scripts {
