status cru(d) working

--- a/Pages/Admin/Status.cshtml
+++ b/Pages/Admin/Status.cshtml
@@ -10,7 +10,7 @@
 <partial name="_FlashPartial" />
 
 <div>
-    <a href="Statuses">Back to Status</a>
+    <a href="Statuses">Back to Statuses</a>
 </div>
 
 <div class="form_div"></div>
