--- a/Pages/Search.cshtml
+++ b/Pages/Search.cshtml
@@ -3,7 +3,7 @@
 @using Microsoft.AspNetCore.Mvc.Razor
 
 @{
-    ViewData["Title"] = "Search";
+    ViewData["Title"] = "Search Issues";
 }
 
 <h1>Search Issues</h1>
@@ -16,7 +16,7 @@
     <form class="search_form" method="post">
         
         <div>
-            <label>Search:</label>
+            <label>Search Keywords:</label>
             <input asp-for="search_terms"/>
         </div>
 
