--- a/Pages/Issue.cshtml
+++ b/Pages/Issue.cshtml
@@ -13,6 +13,7 @@
 
 <div class="form_div">
     <form class="issue_form" method="post">
+        <input asp-for="force_create" value=""/>
         @{
             if (Model.id != 0)
             {
@@ -23,6 +24,7 @@
                 </div>
             }
         }
+        
         <div>
             <label>Description</label>
             <input asp-for="description" value="@Model.description" disabled="@Model.null_or_disabled"></input>
@@ -37,8 +39,8 @@
             <label>Category</label>
             <input readonly asp-for="category_text"/>
             <input type="hidden" asp-for="category_id"/>
-            <span onclick="start_dropdown('#category_')" class="readonly_input_edit">Select&nbsp;</span>
-            <span onclick="clear_dropdown('#category_')" class="readonly_input_edit">Clear</span>
+            <span onclick="clear_dropdown('#category_')" class="readonly_input_edit">Clear&nbsp;</span>
+            <span onclick="start_dropdown('#category_')" class="readonly_input_edit">Select</span>
             
             <select class="readonly_input_select" style="display:none" asp-for="category_selected_id" 
             onchange="end_dropdown('#category_')" 
@@ -128,7 +130,7 @@
             {
                 string button_text = (Model.id == 0) ? "Create" : "Update";
                 <div>
-                    <button type="submit">@button_text</button>
+                    <button id="create_or_update_button" type="submit">@button_text</button>
                 </div>
             }
         }
@@ -138,7 +140,7 @@
 </div>
 
 <div>
-    <a href="Issue?id=0">Clear and create another issue</a>
+    <div class="fake_link" onclick="prep_for_another()">Create another issue like this one</div>
 </div>
 
 @{
@@ -295,6 +297,11 @@
         
     }
     
+    function prep_for_another() {
+        $("#posts").html("")
+        $("#force_create").val("force_create")
+        $("#create_or_update_button").html("Create")
+    }
     </script>
 
 }
