--- a/Pages/Issues.cshtml
+++ b/Pages/Issues.cshtml
@@ -15,9 +15,8 @@
         </div>
 
         <div>
-            Queries
+            View:
             <select onchange="on_query_change()" asp-for="query_id" asp-items="@Model.queries">
-                <option value="">-- Select Query --</option>
             </select>
         </div>
 
