--- a/Pages/Admin/Projects.cshtml
+++ b/Pages/Admin/Projects.cshtml
@@ -6,10 +6,11 @@
 }
 
 <h1>@ViewData["Title"]</h1>
+<partial name="_FlashPartial" />
 
 <a href="Project?id=0">Create Project</a>
 
-<partial name="_DataTablePartial" />
+<partial name="_CrudDataTablePartial" />
 
 @section Scripts {
     
