--- a/Pages/Admin/Statuses.cshtml
+++ b/Pages/Admin/Statuses.cshtml
@@ -9,7 +9,7 @@
 
 <a href="Status?id=0">Create Status</a>
 
-<partial name="_DataTablePartial" />
+<partial name="_CrudDataTablePartial" />
 
 @section Scripts {
     
