--- a/Pages/Admin/Email.cshtml
+++ b/Pages/Admin/Email.cshtml
@@ -7,6 +7,8 @@
     ViewData["Title"] = "Email";
 }
 <h1>@ViewData["Title"]</h1>
+<partial name="_FlashPartial" />
+
 
 result=@Model.email_result
 
