--- a/Pages/Admin/Queries.cshtml
+++ b/Pages/Admin/Queries.cshtml
@@ -6,10 +6,11 @@
 }
 
 <h1>@ViewData["Title"]</h1>
+<partial name="_FlashPartial" />
 
 <a href="Query?id=0">Create Issue Query</a>
 
-<partial name="_DataTablePartial" />
+<partial name="_CrudDataTablePartial" />
 
 @section Scripts {
     
