--- a/Pages/Admin/Users.cshtml
+++ b/Pages/Admin/Users.cshtml
@@ -6,8 +6,7 @@
 }
 
 <h1>@ViewData["Title"]</h1>
-
-<partial name="_DataTablePartial" />
+<partial name="_CrudDataTablePartial" />
 
 @section Scripts {
     
