--- a/Pages/Admin/Query.cshtml
+++ b/Pages/Admin/Query.cshtml
@@ -1,12 +1,12 @@
 @page
-@model RunSqlModel
+@model QueryModel
 @using Microsoft.AspNetCore.Mvc.Razor
 
 @{
-    ViewData["Title"] = "Run Sql";
+    ViewData["Title"] = "Query";
 }
 
-<h1>Run Sql</h1>
+<h1>Query</h1>
 <partial name="_FlashPartial" />
 
 <div class="form_div">
