--- a/Pages/Issue.cshtml
+++ b/Pages/Issue.cshtml
@@ -34,7 +34,7 @@
 
 <div class="form_div">
     <form class="issue_form" method="post">
-        <input asp-for="force_create" value=""/>
+        <input type="hidden" asp-for="force_create" value=""/>
         @{
             
             if (Model.id != 0)
@@ -69,6 +69,7 @@
             <label>Category</label>
             <input readonly asp-for="category_text"/>
             <input type="hidden" asp-for="category_id"/>
+            
             <span onclick="clear_dropdown('#category_')" class="readonly_input_edit">Clear&nbsp;</span>
             <span onclick="start_dropdown('#category_')" class="readonly_input_edit">Select</span>
             
@@ -83,9 +84,9 @@
             <label>Projectory</label>
             <input readonly asp-for="project_text"/>
             <input type="hidden" asp-for="project_id"/>
-            <span onclick="start_dropdown('#project_')" class="readonly_input_edit">Select&nbsp;</span>
-            <span onclick="clear_dropdown('#project_')" class="readonly_input_edit">Clear</span>
-
+            <span onclick="clear_dropdown('#project_')" class="readonly_input_edit">Clear&nbsp;</span>
+            <span onclick="start_dropdown('#project_')" class="readonly_input_edit">Select</span>
+    
             <select class="readonly_input_select" style="display:none" asp-for="project_selected_id" 
             onchange="end_dropdown('#project_')" 
             onblur="end_dropdown('#project_')"
@@ -98,9 +99,9 @@
             <label>Organization</label>
             <input readonly asp-for="organization_text"/>
             <input type="hidden" asp-for="organization_id"/>
-            <span onclick="start_dropdown('#organization_')" class="readonly_input_edit">Select&nbsp;</span>
-            <span onclick="clear_dropdown('#organization_')" class="readonly_input_edit">Clear</span>
-
+            <span onclick="clear_dropdown('#organization_')" class="readonly_input_edit">Clear&nbsp;</span>
+            <span onclick="start_dropdown('#organization_')" class="readonly_input_edit">Select</span>
+       
             <select class="readonly_input_select" style="display:none" asp-for="organization_selected_id" 
             onchange="end_dropdown('#organization_')" 
             onblur="end_dropdown('#organization_')"
@@ -113,9 +114,9 @@
             <label>Priority</label>
             <input readonly asp-for="priority_text"/>
             <input type="hidden" asp-for="priority_id"/>
-            <span onclick="start_dropdown('#priority_')" class="readonly_input_edit">Select&nbsp;</span>
-            <span onclick="clear_dropdown('#priority_')" class="readonly_input_edit">Clear</span>
-
+            <span onclick="clear_dropdown('#priority_')" class="readonly_input_edit">Clear&nbsp;</span>
+            <span onclick="start_dropdown('#priority_')" class="readonly_input_edit">Select</span>
+     
             <select class="readonly_input_select" style="display:none" asp-for="priority_selected_id" 
             onchange="end_dropdown('#priority_')" 
             onblur="end_dropdown('#priority_')"
@@ -128,9 +129,10 @@
             <label>Status</label>
             <input readonly asp-for="status_text"/>
             <input type="hidden" asp-for="status_id"/>
-            <span onclick="start_dropdown('#status_')" class="readonly_input_edit">Select&nbsp;</span>
-            <span onclick="clear_dropdown('#status_')" class="readonly_input_edit">Clear</span>
-
+        
+            <span onclick="clear_dropdown('#status_')" class="readonly_input_edit">Clear&nbsp;</span>
+            <span onclick="start_dropdown('#status_')" class="readonly_input_edit">Select</span>
+        
             <select class="readonly_input_select" style="display:none" asp-for="status_selected_id" 
             onchange="end_dropdown('#status_')" 
             onblur="end_dropdown('#status_')"
@@ -143,9 +145,9 @@
             <label>Assigned To</label>
             <input readonly asp-for="assigned_to_user_text"/>
             <input type="hidden" asp-for="assigned_to_user_id"/>
-            <span onclick="start_dropdown('#assigned_to_user_')" class="readonly_input_edit">Select&nbsp;</span>
-            <span onclick="clear_dropdown('#assigned_to_user_')" class="readonly_input_edit">Clear</span>
-
+            <span onclick="clear_dropdown('#assigned_to_user_')" class="readonly_input_edit">Clear&nbsp;</span>
+            <span onclick="start_dropdown('#assigned_to_user_')" class="readonly_input_edit">Select</span>
+         
             <select class="readonly_input_select" style="display:none" asp-for="assigned_to_user_selected_id" 
             onchange="end_dropdown('#assigned_to_user_')" 
             onblur="end_dropdown('#assigned_to_user_')"
