can add and update queries

--- a/Pages/Admin/Admin.cshtml
+++ b/Pages/Admin/Admin.cshtml
@@ -18,7 +18,7 @@
 <div><a href="/Admin/Statuses">Statuses</a></div>
 <br>
 
-<div><a href="/Admin/Queries">Queries</a></div>
+<div><a href="/Admin/Queries">Issue Queries</a></div>
 <br>
 
 <h1>Under Construction</h1>
