--- a/Pages/Issue.cshtml
+++ b/Pages/Issue.cshtml
@@ -7,6 +7,7 @@
 <partial name="_FlashPartial" />
 
 <div>
+  
     <a href="Issues">Back to Issues</a>
     &nbsp;&nbsp;&nbsp;
     @{
@@ -40,7 +41,7 @@
             
             if (Model.id != 0)
             {
-                <div>
+                <div id="id_and_info">
                     <label>ID @Model.id</label>
                     <span>
                     Created by @Model.created_by_username on @Model.created_date 
@@ -66,8 +67,9 @@
             <textarea asp-for="details" value="@Model.details" disabled="@Model.null_or_disabled"></textarea>
         </div>
         
-        <div><div class="flex">
-        <div id="category_elements">
+        <div><div class="issue_dropdown_container">
+
+        <div id="category_elements" class="issue_dropdown_group">
             <label>Category</label>
             <input readonly asp-for="category_text"/>
             <input type="hidden" asp-for="category_id"/>
@@ -75,59 +77,15 @@
             <span onclick="clear_dropdown('#category_')" class="readonly_input_edit">Clear&nbsp;</span>
             <span onclick="start_dropdown('#category_')" class="readonly_input_edit">Select</span>
             
-            <select class="readonly_input_select" style="display:none" asp-for="category_selected_id" 
-            onchange="end_dropdown('#category_')" 
-            onblur="end_dropdown('#category_')"
-            asp-items="@Model.categories" disabled="@Model.null_or_disabled">
-            </select>
-        </div>
-
-        <div id="project_elements">
-            <label>Project</label>
-            <input readonly asp-for="project_text"/>
-            <input type="hidden" asp-for="project_id"/>
-            <span onclick="clear_dropdown('#project_')" class="readonly_input_edit">Clear&nbsp;</span>
-            <span onclick="start_dropdown('#project_')" class="readonly_input_edit">Select</span>
-    
-            <select class="readonly_input_select" style="display:none" asp-for="project_selected_id" 
-            onchange="end_dropdown('#project_')" 
-            onblur="end_dropdown('#project_')"
-            asp-items="@Model.projects" disabled="@Model.null_or_disabled">
+            <select class="issue_readonly_input_select" asp-for="category_selected_id" 
+            onchange="dropdown_on_change('#category_')" 
+            onblur="close_dropdown('#category_')"
+            asp-items="@Model.category_list" disabled="@Model.null_or_disabled">
             </select>
         </div>
 
 
-        <div id="organization_elements">
-            <label>Organization</label>
-            <input readonly asp-for="organization_text"/>
-            <input type="hidden" asp-for="organization_id"/>
-            <span onclick="clear_dropdown('#organization_')" class="readonly_input_edit">Clear&nbsp;</span>
-            <span onclick="start_dropdown('#organization_')" class="readonly_input_edit">Select</span>
-       
-            <select class="readonly_input_select" style="display:none" asp-for="organization_selected_id" 
-            onchange="end_dropdown('#organization_')" 
-            onblur="end_dropdown('#organization_')"
-            asp-items="@Model.organizations" disabled="@Model.null_or_disabled">
-            </select>
-        </div>
-
-
-        <div id="priority_elements">
-            <label>Priority</label>
-            <input readonly asp-for="priority_text"/>
-            <input type="hidden" asp-for="priority_id"/>
-            <span onclick="clear_dropdown('#priority_')" class="readonly_input_edit">Clear&nbsp;</span>
-            <span onclick="start_dropdown('#priority_')" class="readonly_input_edit">Select</span>
-     
-            <select class="readonly_input_select" style="display:none" asp-for="priority_selected_id" 
-            onchange="end_dropdown('#priority_')" 
-            onblur="end_dropdown('#priority_')"
-            asp-items="@Model.priorities" disabled="@Model.null_or_disabled">
-            </select>
-        </div>
-
-
-        <div id="status_elements">
+        <div id="status_elements" class="issue_dropdown_group">
             <label>Status</label>
             <input readonly asp-for="status_text"/>
             <input type="hidden" asp-for="status_id"/>
@@ -135,25 +93,70 @@
             <span onclick="clear_dropdown('#status_')" class="readonly_input_edit">Clear&nbsp;</span>
             <span onclick="start_dropdown('#status_')" class="readonly_input_edit">Select</span>
         
-            <select class="readonly_input_select" style="display:none" asp-for="status_selected_id" 
-            onchange="end_dropdown('#status_')" 
-            onblur="end_dropdown('#status_')"
-            asp-items="@Model.statuses" disabled="@Model.null_or_disabled">
+            <select class="issue_readonly_input_select" asp-for="status_selected_id" 
+            onchange="dropdown_on_change('#status_')" 
+            onblur="close_dropdown('#status_')"
+            asp-items="@Model.status_list" disabled="@Model.null_or_disabled">
             </select>
         </div>
 
   
-        <div id="assigned_to_user_elements">
+
+        <div id="project_elements" class="issue_dropdown_group">
+            <label>Project</label>
+            <input readonly asp-for="project_text"/>
+            <input type="hidden" asp-for="project_id"/>
+            <span onclick="clear_dropdown('#project_')" class="readonly_input_edit">Clear&nbsp;</span>
+            <span onclick="start_dropdown('#project_')" class="readonly_input_edit">Select</span>
+    
+            <select class="issue_readonly_input_select" asp-for="project_selected_id" 
+            onchange="dropdown_on_change('#project_')" 
+            onblur="close_dropdown('#project_')"
+            asp-items="@Model.project_list" disabled="@Model.null_or_disabled">
+            </select>
+        </div>
+
+
+        <div id="organization_elements" class="issue_dropdown_group">
+            <label>Organization</label>
+            <input readonly asp-for="organization_text"/>
+            <input type="hidden" asp-for="organization_id"/>
+            <span onclick="clear_dropdown('#organization_')" class="readonly_input_edit">Clear&nbsp;</span>
+            <span onclick="start_dropdown('#organization_')" class="readonly_input_edit">Select</span>
+       
+            <select class="issue_readonly_input_select" asp-for="organization_selected_id" 
+            onchange="dropdown_on_change('#organization_')" 
+            onblur="close_dropdown('#organization_')"
+            asp-items="@Model.organization_list" disabled="@Model.null_or_disabled">
+            </select>
+        </div>
+
+
+        <div id="priority_elements" class="issue_dropdown_group">
+            <label>Priority</label>
+            <input readonly asp-for="priority_text"/>
+            <input type="hidden" asp-for="priority_id"/>
+            <span onclick="clear_dropdown('#priority_')" class="readonly_input_edit">Clear&nbsp;</span>
+            <span onclick="start_dropdown('#priority_')" class="readonly_input_edit">Select</span>
+     
+            <select class="issue_readonly_input_select" asp-for="priority_selected_id" 
+            onchange="dropdown_on_change('#priority_')" 
+            onblur="close_dropdown('#priority_')"
+            asp-items="@Model.priority_list" disabled="@Model.null_or_disabled">
+            </select>
+        </div>
+
+        <div id="assigned_to_user_elements" class="issue_dropdown_group">
             <label>Assigned To</label>
             <input readonly asp-for="assigned_to_user_text"/>
             <input type="hidden" asp-for="assigned_to_user_id"/>
             <span onclick="clear_dropdown('#assigned_to_user_')" class="readonly_input_edit">Clear&nbsp;</span>
             <span onclick="start_dropdown('#assigned_to_user_')" class="readonly_input_edit">Select</span>
          
-            <select class="readonly_input_select" style="display:none" asp-for="assigned_to_user_selected_id" 
-            onchange="end_dropdown('#assigned_to_user_')" 
-            onblur="end_dropdown('#assigned_to_user_')"
-            asp-items="@Model.assigned_to_users" disabled="@Model.null_or_disabled">
+            <select class="issue_readonly_input_select" asp-for="assigned_to_user_selected_id" 
+            onchange="dropdown_on_change('#assigned_to_user_')" 
+            onblur="close_dropdown('#assigned_to_user_')"
+            asp-items="@Model.assigned_to_user_list" disabled="@Model.null_or_disabled">
             </select>
         </div>
         </flex></div>
@@ -216,10 +219,10 @@
         // hide our dropdowns that show when user clicks "Edit"
         $(".issue_form").click(function(event){
             if (event.target.className == "readonly_input_edit"
-            || event.target.className == "readonly_input_select") {
+            || event.target.className == "issue_readonly_input_select") {
                  // do nothing
             } else {
-                $(".readonly_input_select").hide()
+                $(".issue_readonly_input_select").css("visibility", "hidden")
             }
         });
 
@@ -227,28 +230,18 @@
      });
     
 
-    function start_dropdown(prefix)
+    function start_dropdown(prefix) 
     {
         dropdown = $(prefix + "selected_id")
-        dropdown.show()
-        /*
-        el = dropdown.get(0)
-        option_count = el.childElementCount
-        console.log(option_count)
-        if (option_count > 8) {
-            el.size = 8
-        }
-        else {
-            el.size = option_count  
-        }
-        */   
-
-  
+        dropdown.width("200px")
+        dropdown.css("min-width", "200px")
+        dropdown.css("visibility", "visible")
     }
     
     
-    function end_dropdown(prefix)
+    function dropdown_on_change(prefix)
     {     
+        dropdown = $(prefix + "selected_id").css("visibility", "hidden");
         selected_option = $(prefix + "selected_id option:selected");
         selected_val = selected_option.val()
         if (selected_val != "0") {
@@ -259,9 +252,13 @@
             $(prefix + "text").val("");
         }
         $(prefix + "id").val(selected_val);
-        $(prefix + "selected_id").hide();
+        close_dropdown(prefix);
     }
  
+    function close_dropdown(prefix) {
+        dropdown = $(prefix + "selected_id").css("visibility", "hidden");
+    }
+
     function clear_dropdown(prefix)
     {     
         $(prefix + "selected_id option:selected").prop("selected", false)
@@ -333,6 +330,7 @@
     
     function prep_for_another() {
         $("#posts").html("")
+        $("#id_and_info").html("")
         $("#force_create").val("force_create")
         $("#create_or_update_button").html("Create")
     }
