--- a/Pages/Issues.cshtml
+++ b/Pages/Issues.cshtml
@@ -87,7 +87,7 @@
                                     }
                                     else
                                     {
-                                        <td>@dr[col]</td>
+                                        <td>@bd_db.format(dr[col])</td>
                                     }
 
                                 }
