--- a/Pages/Shared/_CrudDataTablePartial.cshtml
+++ b/Pages/Shared/_CrudDataTablePartial.cshtml
@@ -29,7 +29,7 @@
                             }
                             else
                             {
-                                <td>@dr[col]</td>
+                                <td>@bd_db.format(dr[col])</td>
                             }
 
 
