--- a/Pages/Shared/_PlainDataTablePartial.cshtml
+++ b/Pages/Shared/_PlainDataTablePartial.cshtml
@@ -10,7 +10,7 @@
     {
         <div class="data_table_div">
 
-            <table class="dt">
+            <table id="results_table" class="dt">
                 @{
                     <tr>
                         @{
